Bug 255378. Make the click-hold context menu code keep content references, not frame references, just as the drag gesture code does, so that it's robust to frame reconstruction during the click-hold time interval. r+sr=bzbarsky,a=asa